<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="dinnerdecider.com.dinnerdecider.DinnerDecider">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/id_image_view_food"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image"
                android:padding="8dp"
                android:src="@drawable/ddlogo" />

            <TextView
                android:id="@+id/id_text_view_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/text_view_food"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_image_view_drink"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image"
                android:padding="8dp"
                android:src="@drawable/drink" />

            <TextView
                android:id="@+id/id_text_view_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/text_view_drink"
                android:textSize="28sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/id_edit_text_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_text_food"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/id_edit_text_drink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_text_drink"
            android:inputType="text"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/id_button_add_food"
            style="@style/button_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_bold"
            android:text="@string/button_add_food" />

        <Button
            android:id="@+id/id_button_add_drink"
            style="@style/button_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_bold"
            android:minWidth="180dp"
            android:text="@string/button_add_drink" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/id_button_decide_food"
            style="@style/button_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_bold"
            android:minWidth="180dp"
            android:text="@string/button_decide_food" />

        <Button
            android:id="@+id/id_button_decide_drink"
            style="@style/button_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_bold"
            android:text="@string/button_decide_drink" />
    </LinearLayout>

    <Button

        android:id="@+id/button_check_order"
        style="@style/button_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/check_order"
        android:textColor="#FFFFFF"

        />
</LinearLayout>
