<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="8dp"
            android:src="@drawable/ddlogo" />

        <TextView
            android:id="@+id/id_text_view_food_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/text_view_food"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="8dp"
            android:src="@drawable/drink" />

        <TextView
            android:id="@+id/id_text_view_drink_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/text_view_drink"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/id_text_view_thanks_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/muli_bold"
        android:gravity="center_horizontal"
        android:text="@string/text_thanks_message"
        android:textSize="24sp" />
</LinearLayout>
